--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
   }
